# secure-inference-nucleo

./: README.md  flash_layout.h  nucleo_l552ze_q_stm32l552xx_ns.dts
hello_world/: CMakeLists.txt  prj.conf
hello_world/dummy_partition/: dummy_partition.c
hello_world/src/: main.c
